<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context="appope.ibm.com.aplicacionoperario.ChatActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:src="@mipmap/ibmrepsol"
        android:id="@+id/imageView"
        tools:ignore="ContentDescription"
        android:layout_gravity="fill_horizontal" />


    <ScrollView
        android:layout_width="match_parent"
        android:background="@drawable/borderbutton"
        android:isScrollContainer="false"
        android:descendantFocusability="blocksDescendants"
        android:id="@+id/scrollView"
        android:layout_height="327dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/lineal"
            tools:ignore="UselessLeaf" />
    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:textColor="@color/colorBlack"
        android:hint="@string/txtPla"
        android:background="@drawable/borderbutton"
        android:gravity="top"
        tools:ignore="LabelFor,RtlSymmetry"
        android:id="@+id/text"
        android:paddingStart="10dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <Button
            android:text="@string/enviar"
            android:layout_height="wrap_content"
            android:id="@+id/enviar"
            android:background="@drawable/borderbutton"
            android:hint="@string/txtPla"
            tools:ignore="ButtonStyle"
            android:layout_marginBottom="8dp"
            android:layout_width="150dp" />

        <Button
            android:text="@string/salir"
            android:layout_height="wrap_content"
            android:background="@drawable/borderbutton"
            android:id="@+id/salir"
            tools:ignore="ButtonStyle"
            android:layout_marginStart="58dp"
            android:layout_width="150dp" />
    </LinearLayout>


</LinearLayout>